# MLOPS_Team4

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  appspec.yml  buildspec.yml  data.dvc  datset_card.md  dvc.yaml  mlops_report_template.docx  model_card.md  negative_subset_examples.pkl  params.yaml  positive_subset_examples.pkl  requirements.txt
.dvc/: config
.github/workflows/: cd.yml  pylint.yml  pylint_and_coverage.yml
MLOps_Team4/: README.md  pyproject.toml
MLOps_Team4/Sentiment_Analysis/: __init__.py  dataset.py  features.py  plots.py
Sentiment_Analysis/: api.py  clean.py  config.py  data_preprocessing.py  generate_encoded_datasets.py  lstm_predict.py  lstm_training.py  params.yaml  preprocess.py  preprocessing.py  split.py  test_api.py  tests.ipynb  train_distilbert.py
Sentiment_Analysis/modeling/: predict.py  train.py
Sentiment_Analysis/tests/: data_preprocessing_test.py
data/processed/: .gitignore  negative_subset_examples.pkl.dvc  positive_subset_examples.pkl.dvc
docs/: clean_dataset-processed_data.html  data_test.ipynb  datset_card.md  model_card.md
live_demo/: extracted_tweets.pkl  live_demo.ipynb
model_experiments/: generate_encoded_datasets.py  logistic_regression_training.py  train_distilbert.py
models/metrics/: lstm_metrics.txt
models/reports/: lstm_classification_report.txt
notebooks/: robert.ipynb
reports/logistic_regression_model/metrics/: logreg_metrics.txt
reports/lstm_model/: .gitignore
scripts/: install_app_dependencies  start_server  stop_server
(+5 files in other folders)
